# ZenGit

./: LICENSE  README.md  README_jp.md  how_to_build.md  how_to_build_jp.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.scss  App.tsx  commit_info_window.html  commit_info_window.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  platform.rs
