[package]
name = "zengit"
version = "0.1.0"
description = "ZenGit"
authors = ["tom-shimoda"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-ask",
    "window-close",
    "window-unminimize",
    "window-unmaximize",
    "window-show",
    "window-start-dragging",
    "window-minimize",
    "window-hide",
    "window-maximize",
    "dialog-message",
    "macos-private-api",
    "shell-all",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.21"
serde_repr = "0.1.19"
rfd = "0.14.1"
simple-home-dir = "0.3.4"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
futures = "0.3.30"
once_cell = "1.19.0"
window-shadows = "0.2.2"
clap_lex = "0.7.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
